Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -72,6 +72,8 @@
       <dl>
           <dt>Ven 21 juin 2019</dt>
           <dd><a href="https://charlet-antoine.github.io/best-tool.html">This is the Best Tool so far</a></dd>
+          <dt>Ven 21 juin 2019</dt>
+          <dd><a href="https://charlet-antoine.github.io/dzatool.html">Seciond</a></dd>
       </dl>
     </div>
   </article>
