--- a/dzatool.html
+++ b/dzatool.html
@@ -1248,6 +1248,14 @@ h6:hover .anchor-link {
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p>{% img [class name(s)] path/to/image [width [height]] [title text | "title text" ["alt text"]] %}</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 \begin{align}
 \nabla \cdot \vec{\mathbf{E}} &amp; = 4 \pi \rho \\
 \nabla \times \vec{\mathbf{E}}\, +\, \frac1c\, \frac{\partial\vec{\mathbf{B}}}{\partial t} &amp; = \vec{\mathbf{0}} \\
@@ -1276,6 +1284,34 @@ h6:hover .anchor-link {
 <ul>
 <li>If we don't have a prior conjugate to the likelihood -&gt; posterior is intractable</li>
 </ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Summary">Summary<a class="anchor-link" href="#Summary">&#182;</a></h3><p>Here are the timing results we've seen above:</p>
+<ul>
+<li><strong>Python + numpy</strong>: 6510 ms</li>
+<li><strong>Cython + numpy</strong>: 668 ms</li>
+<li><strong>Cython + memviews (slicing)</strong>: 22 ms</li>
+<li><strong>Cython + raw pointers</strong>: 2.47 ms</li>
+<li><strong>Cython + memviews (no slicing)</strong>: 2.45 ms</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>Update</strong>: All of the above scripts are now available as an ipython
+notebook: <a href="/downloads/notebooks/memview_bench.ipynb">memview_bench.ipynb</a>.
+For information on how to view this file, see the
+<a href="http://ipython.org/ipython-doc/dev/interactive/htmlnotebook.html">IPython page</a>
+Alternatively, you can view this notebook (but not modify it) using the
+nbviewer <a href="http://nbviewer.ipython.org/url/jakevdp.github.com/downloads/notebooks/memview_bench.ipynb">here</a>.</p>
 
 </div>
 </div>
