Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -69,7 +69,7 @@
     <p class="nav-label">Menu</p>
     <ul>
 
-              <li role="presentation"><a href="https://charlet-antoine.github.io/pages/your_post_title.html">$YOUR_POST_TITLE</a></li>
+              <li role="presentation"><a href="https://charlet-antoine.github.io/pages/dal.html">About</a></li>
 
     </ul>
   </div>
