--- a/tags.html
+++ b/tags.html
@@ -45,7 +45,7 @@
     <p class="nav-label">Menu</p>
     <ul>
 
-              <li role="presentation"><a href="https://charlet-antoine.github.io/pages/dal.html">About</a></li>
+              <li role="presentation"><a href="https://charlet-antoine.github.io/pages/about.html">About</a></li>
 
     </ul>
   </div>
