--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <p class="nav-label">Menu</p>
     <ul>
 
-              <li role="presentation"><a href="https://charlet-antoine.github.io/pages/about.html">About</a></li>
+              <li role="presentation"><a href="https://charlet-antoine.github.io/pages/about.html">about</a></li>
 
     </ul>
   </div>
