Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -73,11 +73,14 @@
         <div class="tag tag-weight-5">
           <a href="https://charlet-antoine.github.io/tag/best.html" title="3 article(s) tagged 'best'">best</a>
         </div>
+        <div class="tag tag-weight-2">
+          <a href="https://charlet-antoine.github.io/tag/best-practice.html" title="1 article(s) tagged 'best practice'">best practice</a>
+        </div>
         <div class="tag tag-weight-5">
           <a href="https://charlet-antoine.github.io/tag/software.html" title="3 article(s) tagged 'software'">software</a>
         </div>
-        <div class="tag tag-weight-5">
-          <a href="https://charlet-antoine.github.io/tag/tool.html" title="3 article(s) tagged 'tool'">tool</a>
+        <div class="tag tag-weight-3">
+          <a href="https://charlet-antoine.github.io/tag/tool.html" title="2 article(s) tagged 'tool'">tool</a>
         </div>
     </div>
   </article>
