--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
 <body class="home-template">
 
 <nav id="menu">
+              <a class="site-title" href="/">Data Science Portfolio</a>
+        <ul class="visible-links"><li class="masthead__menu-item">
+              <a href="/about/" >About</a>
+            </li><li class="masthead__menu-item">
+              <a href="/data-engineering/" >Data Engineering</a>
+            </li><li class="masthead__menu-item">
+              <a href="/nlp/" >NLP</a>
+            </li><li class="masthead__menu-item">
+              <a href="/machine-learning/" >Machine Learning</a>
+            </li><li class="masthead__menu-item">
+              <a href="/deep-learning/" >Deep Learning</a>
+            </li><li class="masthead__menu-item">
+              <a href="/tags/" >Blog</a>
+            </li></ul>
+        
+        <button class="search__toggle" type="button">
   <a class="close-button">Close</a>
   <div class="nav-wrapper">
     <p class="nav-label">Menu</p>
